<resources>
    <string name="app_name">订餐系统</string>
    <string name="btn_back">返回</string>
    <string name="center_top_name">订餐系统</string>
    <string name="btn_search">搜索</string>
    <string name="allfood">全部美食</string>
    <string name="bestfood">特价美食</string>
    <string name="onsale">本店特价</string>
    <string name="collect">收藏</string>
    <string name="add">添加</string>
    <string name="clear">清空</string>
    <string name="cart">购物车</string>
    <string name="submit">提交</string>
    <string name="chargeback">退单</string>
    <string name="amount">总计</string>
    <string name="comment">评论</string>
    <string name="dinningOline">订餐系统</string>
    <string name="my">我的</string>
    <string name="login_or_register">登录/注册</string>
    <string name="address">收货地址</string>
    <string name="user">用户名</string>
    <string name="password">密码</string>
    <string name="homepage">首页</string>
    <string name="mycollect">我的收藏</string>
    <string name="trading">正在交易订单</string>
    <string name="history">历史交易订单</string>
</resources>
