<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cart"
            android:textSize="20dp"
            android:layout_centerInParent="true"/>
        <Button
            android:layout_width="70dp"
            android:layout_height="40dp"
            android:textSize="12dp"
            android:text="@string/clear"
            android:layout_gravity="right"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            />
    </RelativeLayout>
    <ListView android:id="@+id/cart_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        />
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom">
        <TextView android:id="@+id/amount_list_cart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16dp"
            android:text="总计"
            android:paddingRight="40dp"
            android:layout_alignParentRight="true"/>
        <Button android:id="@+id/submit_list_cart"
            android:layout_width="80dp"
            android:layout_height="40dp"
            android:textSize="16dp"
            android:layout_below="@id/amount_list_cart"
            android:layout_alignParentRight="true"
            android:text="@string/submit"/>
    </RelativeLayout>

</LinearLayout>
